# SFND_OpenCV_exercise

./: .gitignore  CMakeLists.txt  README.md
src/: change_pixels.cpp  cornerness_harris.cpp  create_matrix.cpp  describe_keypoints.cpp  detect_keypoints.cpp  gaussian_smoothing.cpp  gradient_sobel.cpp  load_image_2.cpp  load_image_3.cpp  magnitude_sobel.cpp
